00_sample_applications/03_eks_cluster_terraform/05_AWS_LoadBalancer/examples/02/03_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: aws_lbc_2
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-group: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec: 
  ingressClassName: alb
  rules:
    - host: aws_lbc_2.vishnuthejabhadri.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 8080
